# PortfolioOptimizer

./: CMakeLists.txt  LICENSE.txt  README.md
backend/api/: Server.cpp  Server.h
backend/data/: prices.csv
backend/src/: BacktestEngine.cpp  BacktestEngine.h  DataCache.cpp  DataCache.h  Matrix.h  Optimizer.cpp  Optimizer.h  OptimizerUtils.cpp  OptimizerUtils.h  PortfolioExporter.cpp  PortfolioExporter.h  PortfolioMetrics.cpp  PortfolioMetrics.h  PortfolioService.cpp  PortfolioService.h  RiskMetrics.cpp  RiskMetrics.h  Statistics.cpp  Statistics.h  main.cpp
backend/src/data/: CSVProvider.cpp  CSVProvider.h  DataProvider.h  MarketDataService.cpp  MarketDataService.h
data/: prices.csv
frontend/vite-project/: index.html  package-lock.json  package.json  vite.config.js
frontend/vite-project/public/: capital_market_line.json  portfolio_data.json
frontend/vite-project/src/: App.jsx  main.jsx
frontend/vite-project/src/components/: AnimatedNumber.jsx  AssetAllocationPie.jsx  AssetAllocationTable.jsx  AuthPage.jsx  BacktestChart.jsx  ConstraintsPanel.jsx  CryptoMarketAnalysis.jsx  EfficientFrontierChart.jsx  EfficientFrontierDashboard.jsx  HeroSection.jsx  LandingPage.jsx  LiveTicker.jsx  LoginModal.jsx  MonteCarloChart.jsx  Navbar.jsx  NewLandingPage.jsx  RiskFreeRateControl.jsx  ScenarioAnalysis.jsx  USDRelativeTerminal.jsx  VarCard.jsx
frontend/vite-project/src/context/: PortfolioContext.jsx
frontend/vite-project/src/hooks/: useCryptoSocket.js  useKeyboardShortcuts.js  usePortfolioSocket.js
frontend/vite-project/src/services/: api.js
src/: Matrix.cpp  Optimizer.cpp  Optimizer.h  Statistics.cpp  Statistics.h  main.cpp
